<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Get Fortune</string>
    <string name="action_settings">Settings</string>
    <string name="create_notification">Get New Notification!</string>
    <string name="notification_title">New Fortune</string>
    <string name="pref_update">Update Options</string>
    <string name="pref_enable_update">Enable updates</string>
	<string name="pref_enable_update_summ">Allow app to automatically update fortunes</string>
    <string name="pref_enable_notification">Enable notifications</string>
	<string name="pref_enable_notification_summ">Send notification when app updates</string>
	<string name="pref_notification_interval">Send notifications</string>
	<string name="pref_notification_time">Set Time</string>
	<string name="pref_database">Database</string>
	<string name="pref_database_clear">Clear Database</string>
	<string name="set">Set</string>
	<string name="cancel">Cancel</string>
	<string name="history_title">History</string>
	<string name="upvote_description">Up Arrow</string>
	<string name="downvote_description">Down Arrow</string>
	<string name="up_button">Upvote Button</string>
	<string name="down_button">Downvote Button</string>
	<string name="already_voted">You already voted</string>
	<string name="up_vote">Upvote Received</string>
	<string name="down_vote">Downvote Received</string>
	<string name="null_fortune">No Fortune Yet</string>
	<string name="loading_fortune">No Fortune Yet\n(click to refresh)</string>
	<string name="server_error">Server Communication Error</string>
	<string name="submit_text_error">Fortune length must be between 5 to 255 characters.</string>
	<string name="refresh_button">Get New Fortune</string>
	<string name="flag_button">Flag Current Fortune</string>
	<string name="vote_default_count">0</string>
	<string name="submit_title">Submitted Fortunes</string>
	<string name="submit_button_text">Submit New Fortune</string>
	<string name="submit_fortune_hint">Your own fortune here</string>
	<string name="empty_history">No Past Fortunes</string>
	<string name="date_submitted">Submitted on </string>
	<string name="empty_submit">No Fortunes Submitted</string>
	<string name="upvotes">Upvotes</string>
	<string name="downvotes">Downvotes</string>
</resources>