<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

		<TextView 
		    android:id="@+id/home_fortune_text"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="@dimen/view_margin"
		    android:gravity="center"
		    android:textSize="@dimen/home_text_large"
		    android:textStyle="bold"
		    android:text="@string/null_fortune"
		    android:textIsSelectable="false" />
			
		    <LinearLayout
			    android:id="@+id/submitted_info"
		        android:orientation="horizontal"
		        android:paddingTop="10dp"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" >
		
			
				<TextView
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_marginTop="@dimen/view_margin"
				    android:textSize="@dimen/medium_text"
				    android:text="@string/date_submitted"
				    android:paddingRight="5sp"
				    android:textIsSelectable="false" /> 
				    
				<TextView
				    android:id="@+id/home_fortune_date"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:layout_marginTop="@dimen/view_margin"
				    android:textSize="@dimen/medium_text"
				    android:textIsSelectable="false" />     
		</LinearLayout>
    </LinearLayout>
	

	
	<RelativeLayout 
	    android:id="@+id/home_vote_info"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true" >
		
		<LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:layout_alignParentLeft="true" >

			<LinearLayout
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center"
			    android:orientation="horizontal" >

			    <TextView
			        android:id="@+id/home_fortune_upvotes"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="@dimen/view_margin"
			        android:text="@string/vote_default_count"
			        android:textAppearance="?android:attr/textAppearanceLarge"
			        android:textColor="@color/upvote_color"
			        android:textIsSelectable="false"
			        android:textSize="@dimen/medium_text" />

			    <TextView
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="@dimen/view_margin"
			        android:gravity="center"
			        android:paddingLeft="5sp"
			        android:text="@string/upvotes"
			        android:textAppearance="?android:attr/textAppearanceLarge"
			        android:textColor="@color/upvote_color"
			        android:textIsSelectable="false"
			        android:textSize="@dimen/medium_text" />
			</LinearLayout>
		    
		    <ImageButton
		        android:id="@+id/home_upvote_image"
		        android:background="@null"
		        android:layout_width="@dimen/arrow_size_large"
		        android:layout_height="@dimen/arrow_size_large"
		        android:scaleType="fitCenter"
		        android:layout_marginTop="@dimen/image_margin"
		        android:layout_marginLeft="@dimen/image_margin"
		        android:src="@drawable/arrow_up_large"
		        android:contentDescription="@string/upvote_description" />
		    
	    </LinearLayout>
	    
		<LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:layout_alignParentRight="true" >
		    
		   	<LinearLayout
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center"
			    android:orientation="horizontal" >
		    		
				<TextView 
				    android:id="@+id/home_fortune_downvotes"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:gravity="center"
				   	android:text="@string/vote_default_count"
				    android:layout_marginTop="@dimen/view_margin"
				    android:textSize="@dimen/medium_text"
				   	android:textColor="@color/downvote_color"
		        	android:textAppearance="?android:attr/textAppearanceLarge"
				    android:textIsSelectable="false" />
				
				<TextView
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="@dimen/view_margin"
			        android:gravity="center"
			        android:paddingLeft="5sp"
			        android:text="@string/downvotes"
			        android:textAppearance="?android:attr/textAppearanceLarge"
			        android:textColor="@color/downvote_color"
			        android:textIsSelectable="false"
			        android:textSize="@dimen/medium_text" />
			</LinearLayout>
	    
		    <ImageButton
		        android:id="@+id/home_downvote_image"
		        android:background="@null"
		        android:layout_width="@dimen/arrow_size_large"
		        android:layout_height="@dimen/arrow_size_large"
		        android:scaleType="fitCenter"
		        android:layout_marginTop="@dimen/image_margin"
		        android:layout_marginRight="@dimen/image_margin"
		        android:src="@drawable/arrow_down_large"
		        android:contentDescription="@string/downvote_description" />
		    
		    
		</LinearLayout>
	    
	</RelativeLayout>
	
</RelativeLayout>